--- a/frontend/index.html
+++ b/frontend/index.html
@@ -644,7 +644,7 @@
       "Kept you waiting, huh?",
       "This is Predator. I've analyzed your exoplanet data...",
       "The hunt has yielded interesting results...",
-      "Target acquisition complete. Displaying tactical data now..."
+      "Target acquisition complete. Displaying data now..."
     ];
 
     // Sidebar functions
